# ttc

./: .gitmodules  LICENSE  README.md  _bootstrap.py  clean.sh  configure.sh  cube_processor.py  cvc5_runner.py  hall_runner.py  latte_runner.py  literal_mapping.py  pyproject.toml  pyrightconfig.json  requirements.txt  shapeshifter  shapeshifter.py  smt_matrix_converter.py  smt_parser.py  test_vertices.py  ttc  ttc.py  utils.py
.github/workflows/: ci.yml  release.yml
example/: boolvar_lra.smt2  box-and.smt2  box-or-disj.smt2  box-or.smt2  box.smt2  box.smt2.cnf  box_or_lra.smt2  cube.smt2  cube_lra.smt2  implies_lra.smt2  ite.smt2  let.smt2  simplebox.smt2  xz.smt2
src/: __init__.py  component_count.py  count_by_opt.py  cube_processor.py  cube_processor_nondis.py  cvc5_runner.py  decompose_polytope.py  global_storage.py  hall_runner.py  latte_runner.py  literal_mapping-old.py  literal_mapping.py  polytope_bv.py  polytope_operations.py  py_benchmark_template.py  smt_matrix_converter.py  smt_parser.py  utils.py
utils/: bound.py  homeclean.sh  install.md  install.sh  lia_to_lra.py  listreals.py  randgen.py
utils/sampling_polytopes/: CMakeLists.txt  sample_polytope.cpp
